# shared_link_bridge

./: .gitignore  CMakeLists.txt  package.xml  setup.cfg  setup.py
config/: controller_teleop.yaml
docs/: README.md
msg/: KairosValues.msg  VehicleControl.msg
shared_link_bridge/: UDPConnection.py  controller_teleop.py  estop_beacon.py  keyboard_teleop.py  premade_msgs.py  shared_link_bridge_node.py  tui.py  udp_testing.ipynb
shared_link_py/: UDPConnection.py  estop_beacon.py  other_beacons.py  premade_msgs.py  shared_link_node.py  template_node.py  udp_testing.ipynb
srv/: ExecCmd.srv  GetVehicleControl.srv  SendMsgSet.srv  SetEStopState.srv
